@@ -1,9 +1,10 @@
 import java.io.RandomAccessFile
+import java.util.*
 
 plugins {
     java
     application
-    id("org.openjfx.javafxplugin") version "0.0.10"
+    id("com.github.johnrengelman.shadow") version "7.1.0"
 }
 
 group = "org.glavo"
@@ -15,39 +16,40 @@ version = "4.0-beta1".let {
     }
 }
 
-val launcherClassName = "org.glavo.viewer.Launcher"
-val mainClassName = "org.glavo.viewer.Main"
+val viewerLauncher = "org.glavo.viewer.Launcher"
+val viewerMain = "org.glavo.viewer.Main"
 
 repositories {
     maven(url = System.getenv("MAVEN_CENTRAL_MIRROR") ?: "https://repo1.maven.org/maven2/")
+    // maven(url = "https://jitpack.io")
+    // mavenCentral()
 }
 
 dependencies {
-    annotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:0.4.2")
-    annotationProcessor("net.java.dev.jna:jna-platform:5.9.0")
-}
+    implementation("org.glavo:kala-platform:0.5.0")
 
-javafx {
-    version = "17.0.1"
-    modules = listOf("javafx.controls")
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+    implementation("com.fasterxml.jackson.core:jackson-core:2.13.2")
+
+    annotationProcessor("com.github.bsideup.jabel:jabel-javac-plugin:0.4.2")
+    annotationProcessor("net.java.dev.jna:jna-platform:5.10.0")
 }
 
 application {
-    mainClass.set("org.glavo.viewer/org.glavo.viewer.Launcher")
-}
-
-val java11 = sourceSets.create("java11") {
-    java.srcDirs("src/main/java11")
+    mainClass.set("org.glavo.viewer/$viewerMain")
 }
 
 tasks.compileJava {
     sourceCompatibility = "17"
-
     options.release.set(9)
-    options.javaModuleMainClass.set(mainClassName)
+    options.javaModuleMainClass.set(viewerMain)
     options.encoding = "UTF-8"
 
-    options.compilerArgs.add("-Xplugin:jabel")
+    options.compilerArgs.addAll(
+        listOf(
+            "-Xplugin:jabel"
+        )
+    )
 
     doLast {
         val tree = fileTree(destinationDirectory)
@@ -63,28 +65,58 @@ tasks.compileJava {
     }
 }
 
-tasks.getByName<JavaCompile>("compileJava11Java") {
-    sourceCompatibility = "11"
-    targetCompatibility = "11"
-    options.encoding = "UTF-8"
-    options.compilerArgs.add("--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED")
-}
-
-dependencies {
-    "java11Implementation"(sourceSets.main.get().output.classesDirs)
-}
-
 tasks.jar {
+    enabled = false
     manifest.attributes(
         "Implementation-Version" to "1.2",
-        "Main-Class" to launcherClassName,
-        "Multi-Release" to "true",
+        "Main-Class" to viewerLauncher,
         "Add-Exports" to listOf(
             "java.base/jdk.internal.loader"
         ).joinToString(" ")
     )
+}
 
-    into("META-INF/versions/11") {
-        from(java11.output)
+tasks.named<com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar>("shadowJar") {
+
+}
+
+val jfxModules = listOf("base", "graphics", "controls")
+val jfxClassifier = listOf("linux", "linux-arm32-monocle", "linux-aarch64", "mac", "mac-aarch64", "win", "win-x86")
+val jfxVersion = "17.0.1"
+val jfxRepos = listOf("https://repo1.maven.org/maven2", "https://maven.aliyun.com/repository/central")
+
+var jfxInClasspath = false
+
+try {
+    Class.forName("javafx.application.Application", false, project.javaClass.classLoader)
+    jfxInClasspath = true
+} catch (ignored: Throwable) {
+}
+
+if (!jfxInClasspath) {
+    val osName = System.getProperty("os.name").toLowerCase(Locale.ROOT)
+    val os = when {
+        osName.startsWith("windows") -> "win"
+        osName.startsWith("mac") -> "mac"
+        osName.startsWith("linux") || osName == "gnu" -> "linux"
+        else -> null
+    }
+
+    val arch = when (System.getProperty("os.arch").toLowerCase(Locale.ROOT)) {
+        "x86_64", "x86-64", "amd64", "em64t" -> ""
+        "x86", "x86-32", "x86_32", "i386", "i486", "i586", "i686", "i18pc" -> "-x86"
+        "arm64", "aarch64" -> "-aarch64"
+        "arm", "arm32", "aarch32" -> "-arm32-monocle"
+        else -> null
+    }
+
+    val classifier = "$os$arch"
+
+    if (os != null && arch != null && jfxClassifier.contains(classifier)) {
+        dependencies {
+            jfxModules.forEach { module ->
+                compileOnly("org.openjfx:javafx-$module:$jfxVersion:$classifier")
+            }
+        }
     }
 }
